syntax = "proto3";
package test;

option go_package = "awesomeProject/test";

service Test {
  rpc GetHello(HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string response = 1;
}